# polymarket-data-warehouse

./: .dockerignore  .gitignore  Dockerfile  EXPLAINED.md  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml  pipeline.yml
dashboard/: build.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/marts/: dim_markets.sql  fct_prices.sql  fct_resolutions.sql  mart_calibration.sql  mart_daily_volume.sql  mart_event_coherence.sql  mart_price_dynamics.sql  schema.yml
dbt/models/staging/: schema.yml  stg_markets.sql  stg_prices.sql
dbt/snapshots/: markets_snapshot.sql
ingestion/: __main__.py  cli.py  clob.py  config.py  gamma.py  http_client.py  sink.py  state.py
ingestion/jobs/: backfill_prices.py  harvest_prices.py  load_bigquery.py  sync_catalog.py
tests/: test_gamma_pagination.py  test_gamma_parsing.py  test_harvest_window.py  test_load_bigquery.py  test_sink.py  test_state.py
