[project]
name = "polymarket-data-warehouse"
version = "0.1.0"
description = "Ingestion layer for a Polymarket prediction-market analytics warehouse: lands raw catalog and price data as append-only JSONL, ready to load into BigQuery."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

# Only `ingestion` is the package; data/ and state/ are runtime artifacts
# that setuptools' flat-layout auto-discovery would otherwise trip over.
[tool.setuptools.packages.find]
include = ["ingestion*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
