[project]
name = "polymarket-data-warehouse"
version = "0.1.0"
description = "Ingestion layer for a Polymarket prediction-market analytics warehouse: lands raw catalog and price data as append-only JSONL, ready to load into BigQuery."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
# The warehouse leg: BigQuery loader + dbt. Separate extra so the
# ingestion jobs stay a one-dependency install.
warehouse = [
    "google-cloud-bigquery>=3,<4",
    "dbt-bigquery>=1.8,<2",
]

# Only `ingestion` is the package; data/ and state/ are runtime artifacts
# that setuptools' flat-layout auto-discovery would otherwise trip over.
[tool.setuptools.packages.find]
include = ["ingestion*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
